styles.css
:root {
  --highlight-color: blueviolet;
}

body {
  font-family: "Roboto", sans-serif;
}

h1 {
  font-family: "Libre Bodoni", serif;
  font-weight: 700;
  font-style: italic;
  font-size: calc(2.375rem + 1.5vw);
  margin-bottom: 10px;
}
hr {
  border: 1px solid white;
  opacity: 0.4;
}
p {
  font-weight: 400;
}
a {
  color: blueviolet;
}
a:hover {
  color: #a96bdb;
  cursor: pointer;
}
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.about-title,
.projects-title,
.contact-title {
  background: #e8e7e5;
  margin-bottom: 30px;
  padding: 25px 0px 15px;
}

.black-button {
  color: white;
  background-color: black;
  border: 2px solid black;
  border-radius: 0.375rem;
  padding: 5px 45px;
  margin-left: 5px;
  transition: border-color 0.5s, background-color 0.25s, color 0.5s;
}
.black-button:hover,
.black-button:focus-within {
  color: black;
  background-color: #fafafa;
  border: 2px solid black;
}

/* Icon Grow */
.hvr-icon-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}
.hvr-icon-grow .hvr-icon {
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-icon-grow:hover .hvr-icon,
.hvr-icon-grow:focus .hvr-icon,
.hvr-icon-grow:active .hvr-icon {
  -webkit-transform: scale(1.2) translateZ(0);
  transform: scale(1.2) translateZ(0);
  background-color: blueviolet;
}

.footer-button {
  display: block;
  width: 180px;
  color: black;
  font-size: larger;
  background-color: #e8e7e5;
  border: 2px solid black;
  padding: 14px 0;
  margin-bottom: 20px;
  transition: all 0.5s;
}
.footer-button:hover,
.footer-button:focus-within {
  color: black;
  transform: scale(1.04);
}
.button-icons {
  font-size: larger;
  margin-right: 5px;
}

.contact-section {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.contact-buttons {
  text-align: center;
  outline: 1px solid rgb(40, 27, 216);
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}
.contact-buttons div {
  background: #c4a8dc;
  border: solid;
  padding: 5px 20px;
}
.social-links {
  text-align: center;
  outline: 1px solid rgb(40, 27, 216);
  display: flex;
  justify-content: space-around;
}

.social-links a {
  background: #c4a8dc;
  border: solid;
  padding: 5px 20px;
}

.contact-section a {
  text-decoration: none;
}
.contact-section a:hover {
  color: blueviolet;
}
.fa-envelope,
.fa-linkedin-in,
.fa-github {
  color: #e8e7e5;
  background: black;
  padding: 7px;
  border-radius: 50%;
  margin-bottom: 15px;
  font-size: 16px;
}

.container {
  padding-left: 70px;
  padding-right: 70px;
  max-width: 75rem;
  margin: 0 auto;
  border: 1px solid red;
}

.fa-desktop {
  margin-right: 4px;
}
.fa-wand-magic-sparkles {
  font-size: 40px;
  margin-left: 8px;
}

.gallery-card {
  position: relative;

  transition: transform 500ms ease;
}

.gallery-card:hover,
.gallery-card:focus-within {
  transform: scale(1.04);
}
.gallery-img {
  display: block;
  width: 100%;
}
.gallery-overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border: 1px solid black;
  border-radius: 0.375rem;
  background: rgba(0, 0, 0, 0.8);
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 400ms ease;
}
.gallery-blur {
  backdrop-filter: blur(2px);
}

/*.gallery-overlay .gallery-text {
  transform: translateY(40px);
  transition: transform 400ms;
}*/

.gallery-overlay:hover,
.gallery-overlay:focus-within {
  opacity: 1;
}
.gallery-text {
  width: 75%;
  text-align: center;
}

/*.gallery-overlay:hover,
.gallery-overlay:focus-within {
  transform: translateY(0);
}*/

.gallery-text p {
  margin-bottom: 0;
}

.introduction {
  min-width: 335px;
  margin: 0 auto;
}
.introduction p {
  margin-left: 5px;
  opacity: 0.8;
  margin-bottom: 30px;
}
.italicize {
  font-family: "Libre Bodoni", serif;
  font-style: italic;
}
.navbar {
  border-top: 1rem solid black;
  border-bottom: 0.5rem solid black;
}
.navbar-brand {
  color: var(--highlight-color);
}
.nav-item {
  margin-left: 30px;
}
.navbar-light {
  background-color: #e8e7e5;
}
.nav-link:hover {
  color: blueviolet;
}
.nav-link.active:hover {
  color: blueviolet;
}
.navbar-nav {
  text-align: right;
}
.pattern {
  background-image: url(/images/halftone-746402_1280.png);
  background-size: 860px 470px;
  background-repeat: repeat-x;
  margin-top: -33px;
}
.project-cards {
  margin-bottom: 175px;
}
.project-cards a {
  text-decoration: none;
  color: black;
}
.project-descriptions h2 {
  font-family: "Libre Bodoni", serif;
}
.project-image {
  display: flex;
  width: fit-content;
}
.projects-title {
  margin-bottom: 80px;
  padding-bottom: 15px;
}
.portrait-element {
  margin: 0 auto;
}
.rectangle-blend {
  background-color: #e8e7e5;
  margin-top: 60px;
  height: 420px;
  width: 100%;
  mix-blend-mode: lighten;
}

.title-container {
  padding-left: 70px;
  padding-right: 70px;
  max-width: 75rem;
  margin: 0 auto;
  border: 1px solid rgb(0, 255, 17);
}
#about,
#projects,
#contact {
  padding-top: 85px;
  margin-top: -85px;
}
#about-list,
#contact-list {
  margin-top: 45px;
}
#about-list p {
  margin-bottom: 32px;
}
#arrow {
  margin-left: 8px;
}
#home {
  margin-top: 170px;
}
#portrait {
  max-width: 260px;

  display: block;
  margin: 0 auto;

  border-radius: 150px;
  border: 2px solid rgb(0, 0, 0);
  box-shadow: 3px 5px 8px rgba(0, 0, 0, 0.3);
}
#rectangle {
  background-color: #e8e7e5;
  width: 415px;
  height: 285px;
}
#smiley {
  margin-right: 5px;
  font-size: 22px;
}
#universal-design {
  margin-top: 50px;
  margin-bottom: 200px;
}
#waving-icon {
  margin-right: 8px;
}

@media (max-width: 787px) {
  .portrait-element {
    margin-bottom: 36px;
  }
}
@media (max-width: 991px) {
  .navbar .container {
    padding-left: 20px;
    padding-right: 20px;
  }
}

